examples/test/testpolicy7824.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7824
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key35: value16
      key13: value49
      key4: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value16
      podSelector:
        matchLabels:
          key47: value49
          key1: value5
